@@ -43,7 +43,13 @@ void close_faketape (DEVBLK *dev)
         WRMSG (HHC00201, "I", SSID_TO_LCSS(dev->ssid), dev->devnum, dev->filename, "fake");
         close(dev->fd);
     }
-    strlcpy( dev->filename, TAPE_UNLOADED, sizeof(dev->filename) );
+    if (dev->filename != NULL)
+    {
+        free( dev->filename );
+        dev->filename = NULL;
+    }
+
+    dev->filename = strdup( TAPE_UNLOADED );
     dev->fd=-1;
     dev->devunique.tape_dev.blockid = 0;
     dev->devunique.tape_dev.fenced = 0;
@@ -162,7 +168,13 @@ char            pathname[MAX_PATH];     /* file path in host format  */
     {
         WRMSG (HHC00205, "E", SSID_TO_LCSS(dev->ssid), dev->devnum, dev->filename, "fake", "open()", strerror(errno));
 
-        strlcpy( dev->filename, TAPE_UNLOADED, sizeof(dev->filename) );
+        if ( dev->filename != NULL )
+        {
+            free( dev->filename );
+            dev->filename = NULL;
+        }
+
+        dev->filename = strdup( TAPE_UNLOADED );
         build_senseX(TAPE_BSENSE_TAPELOADFAIL,dev,unitstat,code);
         return -1;
     }
