@@ -1,3 +1,4 @@
+17 Aug 2011 Change dev->filename to pointer - P. Gorlinsky
 17 Aug 2011 Move device unique data fields into devunique union. - P.Gorlinsky
 12 Aug 2011 Fix color message and timestamp problem. Removed LOGMSG macro.
             change log_msg to logmsg. - P. Gorlinsky
